# coreml-framework

./: .gitignore  CMakeLists.txt  README.md
core/include/: ml_core.h
core/src/: main.cpp  ml_core.cpp
python-training-pipeline/: README.md  requirements.txt
python-training-pipeline/core_cpp/: README.md
python-training-pipeline/data/: generate_data.py
python-training-pipeline/models/: mlp.onnx  model.py
python-training-pipeline/scripts/: export_onnx.py  train.py
